--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,26 +1,21 @@
 # Replace the text below to customize your site
-site_name: Student Name - MDEF & Fab Lab Barcelona
+site_name: Nombre Estudiante - UTEC & Fab Lab Barcelona
 site_description: Master in Design for Emergent Futures
-site_author: Student Name
-copyright: Copyleft 2023 "Student Name" - GNU Free Documentation License
+site_author: Nombre Estudiante
+copyright: Copyleft 2024 "Nombre Estudiante" - GNU Free Documentation License
 repo_name: 'Name : Github Repo'
-site_url: https://fablabbcn.github.io/mdef-template/
-repo_url: 'https://github.com/fablabbcn/mdef-template'
+site_url: https://fablabbcn.github.io/efdi-template/
+repo_url: 'https://github.com/fablabbcn/efdi-template'
 
 
 nav:
   - Home: index.md
   - About: about/me.md
-  - Master project:
-      - Initial ideas: project/project.md
-  - Reflections :
-      - Term 1:
-          - Bootcamp: term1/01-Bootcamp.md
-          - AoWS: term1/02-Atlas of Weak Signals.md
-
-      - Term 2:
-          - digi: term1/01-Bootcamp.md
-          - studio: term1/01-Bootcamp.md
+  - Proyecto:
+    - Ideas Iniciales: project/project.md
+  - Modulos Tecnicos :
+    - Bootcamp: term1/01-Bootcamp.md
+    - AoWS: term1/02-Atlas of Weak Signals.md
 
 
 
@@ -43,7 +38,7 @@ theme:
   name: material
   palette:
     # try other colors https://squidfunk.github.io/mkdocs-material/getting-started/#primary-colors
-    primary: blue
+    primary: #024639ff
     accent: purple
   font:
     # See available fonts at https://fonts.google.com/
