--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -5,7 +5,7 @@ site_author: Nombre Estudiante
 copyright: Copyleft 2024 "Nombre Estudiante" - GNU Free Documentation License
 repo_name: 'Name : Github Repo'
 site_url: https://fablabbcn.github.io/efdi-template/
-repo_url: 'https://github.com/fablabbcn/efdi-template'
+repo_url: https://github.com/fablabbcn/efdi-template
 
 
 nav:
