--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -40,7 +40,7 @@ theme:
   name: material
   palette:
     # try other colors https://squidfunk.github.io/mkdocs-material/getting-started/#primary-colors
-    primary: #0c453aff
+    primary: custom
     accent: purple
   font:
     # See available fonts at https://fonts.google.com/
