--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -16,8 +16,8 @@ nav:
     - MT02: tecnicos/mt02.md
   - Modulos Diseño :
     - MD01: diseno/md01.md
-  - Modulos Inovación :
-    - MI01: inovacion/mi01.md
+  - Modulos Innovación :
+    - MI01: innovacion/mi01.md
   - Proyecto Integrador:
     - Ideas Iniciales: proyecto/proyecto.md
 
