update menu nav

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -10,16 +10,18 @@ repo_url: https://github.com/fablabbcn/efdi-template
 
 nav:
   - Home: index.md
-  - About: about/me.md
+  - jajajsaksjahksjhakjshas: about/santi.md
   - Modulos Técnicos :
     - MT01: tecnicos/mt01.md
     - MT02: tecnicos/mt02.md
   - Modulos Diseño :
     - MD01: diseno/md01.md
   - Modulos Innovación :
-    - MI01: innovacion/mi01.md
+    - MI01: inn/mi01.md
   - Proyecto Integrador:
     - Ideas Iniciales: proyecto/proyecto.md
+  - Referencias:
+    - web: ref/web.md
 
 
 extra:
