--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -10,7 +10,7 @@ repo_url: https://github.com/fablabbcn/efdi-template
 
 nav:
   - Home: index.md
-  - jajajsaksjahksjhakjshas: about/santi.md
+  - About: about/me.md
   - Modulos Técnicos :
     - MT01: tecnicos/mt01.md
     - MT02: tecnicos/mt02.md
