--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -50,7 +50,7 @@ theme:
     code: Cutive Mono
   icon:
     logo: material/memory
-  favicon: images/favicon.ico
+  favicon: /images/MT02/logoV1_BN.svg
   features:
     - instant
     - navigation.expand
