Módulos de innovación

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -18,6 +18,8 @@ nav:
     - MD01: diseno/md01.md
   - Modulos Innovación :
     - MI01: inn/mi01.md
+    - MI02: inn/mi02.md
+    - MI03: inn/mi03.md
   - Proyecto Integrador:
     - Ideas Iniciales: proyecto/proyecto.md
   - Referencias:
