--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -52,7 +52,7 @@ theme:
     code: Cutive Mono
   icon:
     logo: material/memory
-  favicon: /images/favicon.ico
+  favicon: /images/favicon.svg
   features:
     - instant
     - navigation.expand
