MT03 - MD02 Update

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -18,6 +18,7 @@ nav:
     - MT04: tecnicos/mt04.md
   - Modulos Diseño :
     - MD01: diseno/md01.md
+    - MD02: diseno/md02.md
   - Modulos Innovación :
     - MI01: innovacion/mi01.md
     - MI02: innovacion/mi02.md
