--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -16,6 +16,8 @@ nav:
     - MT02: tecnicos/mt02.md
     - MT03: tecnicos/mt03.md
     - MT04: tecnicos/mt04.md
+    - MT05: tecnicos/mt05.md
+    - MT06: tecnicos/mt06.md
   - Modulos Diseño :
     - MD01: diseno/md01.md
     - MD02: diseno/md02.md
