--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -21,6 +21,7 @@ nav:
   - Modulos Diseño :
     - MD01: diseno/md01.md
     - MD02: diseno/md02.md
+    - MD03: diseno/md03.md
   - Modulos Innovación :
     - MI01: innovacion/mi01.md
     - MI02: innovacion/mi02.md
