--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -18,6 +18,7 @@ nav:
     - MT04: tecnicos/mt04.md
     - MT05: tecnicos/mt05.md
     - MT06: tecnicos/mt06.md
+    - MT07: tecnicos/mt07.md
   - Modulos Diseño :
     - MD01: diseno/md01.md
     - MD02: diseno/md02.md
@@ -27,7 +28,8 @@ nav:
     - MI02: innovacion/mi02.md
     - MI03: innovacion/mi03.md
   - Proyecto Integrador:
-    - Ideas Iniciales: proyecto/proyecto.md
+    - Pre-entrega: proyecto/pre_entrega.md
+    - Proyecto final: proyecto/proyecto_final.md
   - Referencias:
     - web: ref/web.md
 
