--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -19,6 +19,8 @@ nav:
     - MT05: tecnicos/mt05.md
     - MT06: tecnicos/mt06.md
     - MT07: tecnicos/mt07.md
+    - MT08: tecnicos/mt08.md
+    - MT09: tecnicos/mt09.md
   - Modulos Diseño :
     - MD01: diseno/md01.md
     - MD02: diseno/md02.md
