--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -32,6 +32,7 @@ nav:
   - Proyecto Integrador:
     - Pre-entrega: proyecto/pre_entrega.md
     - Proyecto final: proyecto/proyecto_final.md
+    - Entrega: proyecto/Entrega.md
   - Referencias:
     - web: ref/web.md
 
